<resources>

    <string name="app_name">腾讯微博</string>
    <string name="main_home">主页</string>
    <string name="main_message">消息</string>
    <string name="main_square">广场</string>
    <string name="main_info">资料</string>
    <string name="editinfo">修改资料</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="setting">设置</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
    <string name="boradcast">广播</string>
    <string name="smailphotos">微相册</string>
    <string name="fans">听众</string>
    <string name="listener">收听</string>
    <string name="topicread">话题订阅</string>
    <string name="nick">昵称:</string>
    <string name="simpleinfo">简介:</string>
    <string name="mycollection">我的收藏</string>
    <string name="feedback">意见反馈</string>
    <string name="img_from_camera">手机拍照</string>
    <string name="str_accountManagement">注销</string>
    <string name="manual_update">检查更新</string>
    <string name="exit">退出</string>
    <string name="img_from_album">手机相册</string>
    <string name="delete">删除</string>
    <string name="see_big_pic">查看大图</string>
    <string name="set_head_pic">设为头像</string>
    <string name="please_write_nick">请输入昵称:</string>
    <string name="please_write_info">请输入个人简介:</string>
    <string name="listeners">听众</string>
    <string name="msg_load_image_fail">图片加载失败</string>
    <string name="load_more">加载更多</string>
    <string name="more">More</string>
    <string name="more_ch">更多</string>
    <string name="end">End</string>
    <string name="release_update">松开立即刷新</string>
    <string name="loading">正在加载...</string>
    <string name="drop_dowm">下拉刷新</string>
    <string name="net_busy">网络繁忙</string>
    <string name="load_again">重新加载</string>
    <string name="search">搜索</string>
    <string name="about">关于</string>
    <string name="function_setting">功能设置</string>
    <string name="official_weibo">官方微博</string>
    <string name="message_rock_alarm">消息震动提醒</string>
    <string name="message_sound_alarm">消息声音提醒</string>
    <string name="auto_load">自动加载更多</string>
    <string name="allow_location">允许使用位置</string>
    <string name="print_screen">摇动截屏</string>
    <string name="watermark">图片水印</string>
    <string name="clearCache">清除缓存</string>
    <string name="ten_thousand">万</string>
    <string name="picture_read_failed">图片加载失败</string>
    <string name="wait_for_download_picture">等待图片加载</string>
    <string name="nonews">没有新的消息</string>
    <string name="rewrite">转发</string>
    <string name="comment">评论</string>
    <string name="collection">收藏</string>
    <string name="detail">正文</string>
    <string name="retry_download_pic">重新下载图片</string>
    <string name="say_something">说点什么吧……</string>
    <string name="send">发送</string>
    <string name="sending">发送中</string>
    <string name="retry_send">重新发送</string>
    <string name="send_faile_click_to_open">发送失败，点击打开</string>
    <string name="failed_reason">发送失败：%s</string>
    <string name="send_successfully">发送成功</string>
    <string name="background_sending">发送中</string>
    <string name="send_failed">发送失败</string>
    <string name="wait_server_response">发送完，等结果</string>
    <string name="send_photo">发送照片</string>
    <string name="save_to_draft">保存草稿</string>
    <string name="do_you_want_to_save">是否保存到草稿箱?</string>
    <string name="cancel_draft">取消保存</string>
    <string name="select">选择</string>
    <string name="get_the_last_picture">刚拍的照片</string>
    <string name="dont_have_the_last_picture">没有找到拍过的照片</string>
    <string name="take_camera">拍照</string>
    <string name="select_pic">图库</string>
    <string name="dont_have_camera_app">该设备没有拍照应用</string>
    <string name="cant_insert_album">发生意外，无法写入相册</string>
    <string name="share_pic">分享图片</string>
    <string name="content_cant_be_empty">内容不能为空</string>
    <string name="content_cant_be_empty_and_dont_have_account">内容不能为空，当前也没可用的发微博帐号</string>
    <string name="content_words_number_too_many">字数太多了</string>
    <string name="topic_number">收藏数</string>
    <string name="topic_list">话题列表</string>
    <string name="weibo_number">微博数</string>
    <string name="following_number">关注数</string>
    <string name="fan_number">粉丝数</string>
    <string name="write_letter">写私信</string>

</resources>