<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/whiter"
    android:orientation="vertical" >

    <include layout="@layout/activity_myfollow_headbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/corner_view_small" >

        <TextView
            android:id="@+id/tv_soundAlarm"
            style="@style/tv_fuctionsetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cb_soundAlarm"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/cb_soundAlarm"
            android:text="@string/message_sound_alarm" />

        <CheckBox
            android:id="@+id/cb_soundAlarm"
            android:layout_width="40dip"
            android:layout_height="50dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:button="@drawable/wb_checkbox_setting_selector"
            android:clickable="true"
            android:gravity="center" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_below="@+id/tv_soundAlarm"
            android:background="@color/blank_color" />

        <TextView
            android:id="@+id/tv_rockAlarm"
            style="@style/tv_fuctionsetting"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/tv_soundAlarm"
            android:layout_below="@+id/tv_soundAlarm"
            android:text="@string/message_rock_alarm"
            />

        <CheckBox
            android:id="@+id/cb_rockAlarm"
            android:layout_width="40dip"
            android:layout_height="50dip"
            android:layout_below="@+id/tv_soundAlarm"
            android:layout_toRightOf="@+id/tv_soundAlarm"
            android:button="@drawable/wb_checkbox_setting_selector"
            android:clickable="true"
            android:gravity="center" />
    </RelativeLayout>
    
	 <RelativeLayout
	     android:layout_width="fill_parent"
	     android:layout_height="250dp"
	     android:layout_marginBottom="1dp"
	     android:layout_marginLeft="5dp"
	     android:layout_marginRight="5dp"
	     android:layout_marginTop="15dp"
	     android:background="@drawable/corner_view_small" >

	     <TextView
	         android:id="@+id/tv_auto_load"
	         style="@style/tv_fuctionsetting"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignBottom="@+id/cb_auto_load"
	         android:layout_alignParentLeft="true"
	         android:layout_alignParentTop="true"
	         android:layout_toLeftOf="@+id/cb_auto_load"
	         android:text="@string/auto_load" />

	     <CheckBox
	         android:id="@+id/cb_auto_load"
	         android:layout_width="40dip"
	         android:layout_height="50dip"
	         android:layout_alignParentRight="true"
	         android:layout_alignParentTop="true"
	         android:button="@drawable/wb_checkbox_setting_selector"
	         android:clickable="true"
	         android:gravity="center" />

	     <View
	         android:layout_width="fill_parent"
	         android:layout_height="1px"
	         android:layout_below="@+id/tv_auto_load"
	         android:background="@color/blank_color" />

	     <TextView
	         android:id="@+id/tv_allow_location"
	         style="@style/tv_fuctionsetting"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignBottom="@+id/cb_allow_location"
	         android:layout_alignParentLeft="true"
	         android:layout_alignRight="@+id/tv_auto_load"
	         android:layout_below="@+id/tv_auto_load"
	         android:text="@string/allow_location" />

	     <CheckBox
	         android:id="@+id/cb_allow_location"
	         android:layout_width="40dip"
	         android:layout_height="50dip"
	         android:layout_below="@+id/tv_auto_load"
	         android:layout_toRightOf="@+id/tv_auto_load"
	         android:button="@drawable/wb_checkbox_setting_selector"
	         android:clickable="true"
	         android:gravity="center" />

	     <View
	         android:layout_width="fill_parent"
	         android:layout_height="1px"
	         android:layout_below="@+id/cb_allow_location"
	         android:background="@color/blank_color" />

	     <TextView
	         android:id="@+id/tv_printScreen"
	         style="@style/tv_fuctionsetting"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignBottom="@+id/cb_printScreen"
	         android:layout_alignParentLeft="true"
	         android:layout_below="@+id/tv_allow_location"
	         android:layout_toLeftOf="@+id/cb_printScreen"
	         android:text="@string/print_screen" />

	     <CheckBox
	         android:id="@+id/cb_printScreen"
	         android:layout_width="40dip"
	         android:layout_height="50dip"
	         android:layout_below="@+id/tv_allow_location"
	         android:layout_toRightOf="@+id/tv_allow_location"
	         android:button="@drawable/wb_checkbox_setting_selector"
	         android:clickable="true"
	         android:gravity="center" />
	     
	     <View
	         android:layout_width="fill_parent"
	         android:layout_height="1px"
	         android:layout_below="@+id/cb_printScreen"
	         android:background="@color/blank_color" />

	     <CheckBox
	         android:id="@+id/cb_watermark"
	         android:layout_width="40dip"
	         android:layout_height="50dip"
	         android:layout_below="@+id/tv_printScreen"
	         android:layout_toRightOf="@+id/tv_printScreen"
	         android:button="@drawable/wb_checkbox_setting_selector"
	         android:clickable="true"
	         android:gravity="center" />

	     <TextView
	         android:id="@+id/tv_watermark"
	         style="@style/tv_fuctionsetting"
	         android:layout_width="fill_parent"
	         android:layout_height="wrap_content"
	         android:layout_alignBottom="@+id/cb_watermark"
	         android:layout_alignParentLeft="true"
	         android:layout_alignRight="@+id/tv_printScreen"
	         android:layout_alignTop="@+id/cb_watermark"
	         android:text="@string/watermark" />
	     
	          <View
	         android:layout_width="fill_parent"
	         android:layout_height="1px"
	         android:layout_below="@+id/cb_watermark"
	         android:background="@color/blank_color" />

	          <TextView
	              android:id="@+id/tv_clearCache"
	              style="@style/tv_fuctionsetting"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
	              android:layout_alignParentBottom="true"
	              android:layout_alignParentLeft="true"
	              android:layout_below="@+id/cb_watermark"
	              android:background="@drawable/wb_info_toplist_selector3"
	              android:text="@string/clearCache" />
	     
	 </RelativeLayout>

</LinearLayout>