<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/whiter"
    android:orientation="vertical" >

    <include layout="@layout/activity_myinfo_headbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <include layout="@layout/lv_horizontal" />

            <RelativeLayout
                android:id="@+id/myNameRelativeLayout"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_margin="5dip"
                android:background="@drawable/wb_info_linearlayout_selector"
                android:clickable="true" >

                <ImageButton
                    android:id="@+id/info_ibtn1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:background="@android:color/transparent"
                    android:src="@drawable/wb_timeline_lbs_button_more" />

                <TextView
                    android:id="@+id/info_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="5dip"
                    android:layout_toLeftOf="@+id/info_ibtn1"
                    android:gravity="left|center_vertical"
                    android:text="@string/edit"
                    android:textColor="@color/lbs_blue"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/myNameTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_toLeftOf="@+id/info_tv1"
                    android:gravity="left|center_vertical"
                    android:paddingLeft="10dip"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>

            <include layout="@layout/activity_myinfo_box" />

            <LinearLayout
                android:id="@+id/othersLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="140dip"
                android:layout_margin="5dip"
                android:background="@drawable/corner_view_setting"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/wb_info_toplist_selector1"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/wb_icon_subscribe" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="3.0"
                        android:gravity="left|center_vertical"
                        android:text="@string/topicread"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_topicNum"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dip"
                        android:layout_weight="0.1"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/wb_timeline_lbs_button_more" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.01dip"
                    android:background="@color/silver"
                    android:clickable="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/wb_info_toplist_selector2"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/wb_icon_favorites" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="3.0"
                        android:gravity="left|center_vertical"
                        android:text="@string/mycollection"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_favsNum"
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dip"
                        android:layout_weight="0.1"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/wb_timeline_lbs_button_more" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.01dip"
                    android:background="@color/silver"
                    android:clickable="true" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@drawable/wb_info_toplist_selector3"
                    android:clickable="true"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/wb_icon_feedback" />

                    <TextView
                        android:layout_width="0px"
                        android:layout_height="fill_parent"
                        android:layout_weight="3.5"
                        android:gravity="left|center_vertical"
                        android:text="@string/feedback"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginRight="10dip"
                        android:layout_weight="0.1"
                        android:background="@android:color/transparent"
                        android:scaleType="center"
                        android:src="@drawable/wb_timeline_lbs_button_more" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>